feat: persistent authorization